# DepthMaps

./: .gitignore  CMakeLists.txt
DepthMapToPointCloud/: ComputeShading.comp  DepthMapToPointCloud  DepthMapToPointCloud.cpp  StandardShading.frag  StandardShading.vert
cmake/Modules/: FindOpenCL.cmake  functions.cmake
common/: controls.cpp  hello.c  mykernel.cl  objloader.hpp  shader.cpp  shader.hpp  simpleViewer.cpp  simpleViewer.hpp  texture.cpp  utils.hpp
kernel/: ProgramHandler.cpp  kernel_utils.hpp
resources/libQGLViewer/QGLViewer/: CMakeLists.txt  Makefile  QGLViewer.pro  config.h  libQGLViewer.prl
shaders/: ComputeShading.cs  LiftingScheme.cs  StandardShading.frag  StandardShading.vert
